web design draft 1.1

--- a/index.html
+++ b/index.html
@@ -5,24 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Haoji Wang</title>
     <link href="styles.css" rel="stylesheet" />
-  </head>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Monaco&display=swap" rel="stylesheet">
+</head>
   <body>
     <header>
         <h1>Haoji Wang</h1>
+        <hr />
     </header>
     <main>
         <div class="folder-container">
             <div class="folder">
-                <img src="public/folder-icon.png" alt="Blog Folder">
-                <p>Blog</p>
+                <a href="/blog">
+                    <img src="public/folder-icon.png" alt="Blog Folder">
+                </a>
+                <p>blog</p>
             </div>
             <div class="folder">
-                <img src="public/folder-icon.png" alt="Media Folder">
-                <p>Media</p>
+                <a href="/media">
+                    <img src="public/folder-icon.png" alt="Media Folder">
+                </a>
+                <p>media</p>
             </div>
             <div class="folder">
-                <img src="public/folder-icon.png" alt="Projects Folder">
-                <p>Projects</p>
+                <a href="/projects">
+                    <img src="public/folder-icon.png" alt="Projects Folder">
+                </a>
+                <p>projects</p>
             </div>
         </div>
     </main>
